# illate

./: CMakeLists.txt  DIAGRAMS  EXAMPLE_USAGE  NOTES  README.md
runtime/: api.h  clr.h  core.cpp  core.h  debug.cpp  debug.h  enviroment.h  gc.h  ibool.cpp  ibool.h  ibyte.h  icontainer.cpp  icontainer.h  idouble.cpp  idouble.h  ifunc.h  iint.cpp  iint.h  illate.h  inum.cpp  inum.h  istring.cpp  istring.h  item.cpp  item.h  itemchain.cpp  itemchain.h  loader.h  log.h  nill.cpp  nill.h  runtime.cpp  runtime.h  script.h  utils.h
